CSS/style.css
body {
    height: 100vh;
    width: 100%;
    margin: 0;
}

header {
    display: flex;
    align-items: center;
    gap: 0 6px;
    height: 35px;
    padding: 20px;
    position: absolute;
    top: 0;
    right: 0;
    left: 0;
    background-color: var(--box-bg-color);
    color: var(--main-color);
    font-family: var(--text-style);
    height: 80px;
}

.logo h1 {
    font-size: 30px;
}

.list ul {
    display: flex;
    gap: 20px;
    list-style: none;
    width: 100%;
    justify-content: center;

}

.list ul li a {
    text-decoration: none;
    color: var(--main-color);
    margin-left: 50px;
    font-size: 18px;
    font-weight: bold;


}

.list ul li a:hover {
    border-bottom: 2px solid lightgray;
    transition: 0.5s ease;
}



img {
    height: 60px;
    width: 100%;
    border-radius: 20px;

}


footer {
    height: 120px;
    width: 100vw;
    background-color: var(--box-bg-color);
    position: relative;
    bottom: 0;


}

footer p {
    color: var(--main-color);
    font-size: 15px;
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 0;
}

